fix some alignment issues in product view page and added subscription modal. update links to product view page.

--- a/foundation5/css/app.css
+++ b/foundation5/css/app.css
@@ -160,34 +160,6 @@ tbody tr td{
     text-align: center;
 }
 
-.content {
-    margin-left:auto;
-    margin-right:auto;
-    width:70%;
-}
-#product-name  {
-    text-transform:capitalize;
-    font-family: tahoma;
-    font-weight: bold; 
-    font-size: 30px;
-}
-
-#brand-name  {
-    font-weight:bold;
-    font:italic bold 12px/30px Georgia, serif;
-
-}
-
-#product-image{
-    text-align: center;
-}
-
-#product-price  {
-    font-style: italic;
-    font-family: tahoma;
-    font-size: 20px;
-    display: inline
-}
 .selectedAddress{
     background-color: #008cba;
 }
